<resources>
    <string name="app_name">Dhananjaya Nidhi</string>

    <string name="select_Action">Select Action</string>
    <string name="select_photo_from_gallery">select photo from gallery</string>
    <string name="capture_photo_from_camera">Capture photo from camera</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="cameraTitle">Camera</string>
    <string name="galleryTitle">Gallery</string>
    <string name="image_selection">Image Selection</string>
    <string name="from_where_you_want_to_pick_this_image">From where you want to pick this image?</string>

    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>

    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="please_enter_your_first_name">Please enter your first name</string>
    <string name="please_enter_your_last_name">Please enter your last name</string>
    <string name="please_enter_your_dob">Please enter your dob</string>
    <string name="please_enter_your_gender">Please enter your gender</string>
    <string name="please_enter_your_father_name">Please enter your father name</string>
    <string name="please_enter_your_mother_name">Please enter your mother name</string>
    <string name="please_enter_your_annual_income">Please enter your annual income</string>
    <string name="please_enter_your_occupation">Please enter your Occupation</string>
    <string name="please_enter_your_casts">Please enter your Casts</string>
    <string name="net_connection">Please check your internet connection</string>
    <string name="please_enter_your_otp">Please enter your otp</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_sent_to_mobile">OTP sent to mobile number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="dont_received_otp">Don\'t received the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="loan">Loan</string>
    <string name="address_entry">Address Entry</string>
    <string name="customer_profile">Customer Profile</string>
    <string name="emi_entry">Emi Entry</string>
    <string name="kyc_entry">Kyc Entry</string>
    <string name="nominee_entry">Nominee Entry</string>
    <string name="customer_dds">Customer (DDS)</string>
    <string name="customer_detail">Customer Detail</string>
    <string name="please_enter_amount">Please enter amount</string>
    <string name="please_enter_account_number">Please enter account number</string>
    <string name="rs">₹</string>
    <string name="transaction">Transaction</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="dob">DOB</string>
    <string name="enter_dob">Enter Dob</string>
    <string name="gender">Gender</string>
    <string name="enter_gender">Select Gender</string>
    <string name="father_name">Father Name</string>
    <string name="enter_father_name">Enter father name</string>
    <string name="mother_name">Mother Name</string>
    <string name="enter_mother_name">Enter mother name</string>
    <string name="annual_income">Annual Income</string>
    <string name="enter_annual_income">Enter annual income</string>
    <string name="occupation">Occupation</string>
    <string name="enter_occupation">Enter Occupation</string>
    <string name="submit">Submit</string>
    <string name="caste">Caste</string>
    <string name="enter_caste">Enter Caste</string>
    <string name="customer_account">Customer account</string>
    <string name="customer">Customer</string>
    <string name="enter_customer_account">Enter customer account</string>
    <string name="today_target">Today Target</string>
    <string name="today_collection">Today Collection</string>
    <string name="dds">(DDS</string>
    <string name="customer_">Customer</string>
    <string name="loan_enquiry">Loan Enquiry</string>
    <string name="complaint">Complaint</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="customers">Customers</string>
    <string name="create_member">Create Member</string>
    <string name="pending_members">Pending members</string>
    <string name="monthly_payout">Monthly payout</string>
    <string name="monthly_collection">Monthly Collection</string>
    <string name="house_no">House no</string>
    <string name="enter_house_no">Enter house no</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter address</string>
    <string name="landmark">Landmark</string>
    <string name="enter_landmark">Enter landmark</string>
    <string name="city">City</string>
    <string name="enter_city">Enter city</string>
    <string name="pincode">Pincode</string>
    <string name="enter_pincode">Enter pincode</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_subtitle">Enter your mobile number to continue</string>
    <string name="present_address">Present address</string>
    <string name="copy_to_address">Copy to address</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="aadhar_number">Aadhar number</string>
    <string name="enter_aadhar_number">Enter aadhar number</string>
    <string name="upload_aadhar_card_front">Upload aadhar card front</string>
    <string name="upload_aadhar_card_back">Upload aadhar card back</string>
    <string name="pan_card">PAN Card</string>
    <string name="enter_pan_card">Enter pan card</string>
    <string name="upload_pan_card">Upload pan card</string>
    <string name="upload">Upload</string>
    <string name="upload_customer_picture">Upload Customer Picture</string>
    <string name="upload_signature">Upload Signature</string>
    <string name="please_enter_house_no">Please enter house no</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="please_enter_landmark">Please enter landmark</string>
    <string name="please_enter_city">Please enter city</string>
    <string name="please_enter_pincode">Please enter pincode</string>
    <string name="please_enter_aadhar_card_no">Please enter aadhar card no</string>
    <string name="please_enter_pan_card_no">Please enter pan card no</string>
    <string name="account_number">Account number</string>
    <string name="enter_account_number">Enter account number</string>
    <string name="member_fees">Member fees</string>
    <string name="enter_member_fees">Enter member fees</string>
    <string name="deposit_amount">Deposit amount</string>
    <string name="enter_deposit_amount">Enter deposit amount</string>
    <string name="dds_amount">Dds amount</string>
    <string name="enter_dds_amount">Enter dds amount</string>
    <string name="please_enter_account_no">Please enter account no</string>
    <string name="please_enter_member_fees">Please enter member fees</string>
    <string name="please_enter_deposit_amount">Please enter deposit amount</string>
    <string name="please_enter_dds_amount">Please enter dds amount</string>
    <string name="account_open">Account Open</string>
    <string name="loan_detail">Loan Detail</string>
    <string name="loan_entry">Loan Entry</string>
    <string name="collect">Collect</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="enter_loan_amount">Enter loan amount</string>
    <string name="duration">Duration</string>
    <string name="enter_duration">Enter duration</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_loan_amount">Please enter loan amount</string>
    <string name="please_enter_duration">Please enter duration</string>
    <string name="available_balance">Available Balance</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="go">Go</string>
    <string name="no_data">No Data</string>
    <string name="search">Search</string>
    <string name="no_found">No Found</string>
    <string name="please_click_aadhar_card_front_image">Please click aadhar card front image</string>
    <string name="please_click_aadhar_card_back_image">Please click aadhar card back image</string>
    <string name="please_click_pan_card_image">Please click pan card image</string>
    <string name="please_click_aadhar_customer_image">Please click aadhar customer image</string>
    <string name="please_click_signature_image">Please click signature image</string>
    <string name="pending_amount">Pending Amount:</string>
    <string name="no_record_found">No Record Found</string>

    <!-- Error messages -->
    <string name="error_occurred">An error occurred. Please try again.</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="loading">Loading</string>
    <string name="loading_dots">Loading..</string>

    <!-- Account labels -->
    <string name="account_prefix">A/C :</string>
    <string name="account_prefix_equals">A/C =</string>
    <string name="account_balance_prefix">A/C Balance:</string>
    <string name="account_balance_prefix_equals">A/C Balance =</string>

    <!-- Common actions -->
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>

    <!-- Loan related -->
    <string name="emi_prefix">Emi:</string>
    <string name="loan_date_prefix">Loan Date:</string>
    <string name="paid_amount_prefix">Paid Amount:</string>
    <string name="pending_outstanding_amount_prefix">Pending/outstanding amount:</string>
    <string name="members">Members</string>
    <string name="aadhar_card_front">Aadhar Front</string>
    <string name="aadhar_card_back">Aadhar Back</string>
    <string name="monthly_collection_format">Total month collection: ₹%1$d</string>
    <string name="monthly_payout_format">Total payout: ₹%1$d</string>
    <string name="tab_date_wise_collection">Date Wise collection</string>
    <string name="tab_customer_wise_collection">Customer wise collection</string>
    <string name="rupee_amount_format">₹%1$d</string>
</resources>