<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_10sdp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFirstNameCustomerEntry"
            style="@style/TextInputLayoutAppearance"
            android:layout_margin="@dimen/_10sdp"
            android:hint="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstNameCustomerEntry"
                style="@style/Edittext"
                android:hint="@string/enter_first_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLastNameCustomerEntry"
            style="@style/TextInputLayoutAppearance"
            android:layout_margin="@dimen/_10sdp"
            android:hint="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastNameCustomerEntry"
                style="@style/Edittext"
                android:hint="@string/enter_last_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMobileNumberDdsEntry"
            style="@style/TextInputLayoutAppearance"
            android:layout_margin="@dimen/_10sdp"
            android:hint="@string/mobile_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMobileNumberDdsEntry"
                style="@style/Edittext"
                android:hint="@string/enter_mobile_number"
                android:inputType="number"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDobCustomerEntry"
            style="@style/TextInputLayoutAppearance"
            android:layout_margin="@dimen/_10sdp"
            android:hint="@string/dob">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDobCustomerEntry"
                style="@style/Edittext"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/enter_dob"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilGenderCustomerEntry"
            style="@style/TextInputLayoutAppearance"
            android:layout_margin="@dimen/_10sdp"
            android:hint="@string/gender"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_dropdown_arrow"
            app:endIconTint="@color/text_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etGenderCustomerEntry"
                style="@style/Edittext"
                android:hint="@string/enter_gender"
                android:inputType="none"
                android:focusable="false"
                android:clickable="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFatherNameCustomerEntry"
            style="@style/TextInputLayoutAppearance"
            android:layout_margin="@dimen/_10sdp"
            android:hint="@string/father_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFatherNameCustomerEntry"
                style="@style/Edittext"
                android:hint="@string/enter_father_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMotherNameCustomerEntry"
            style="@style/TextInputLayoutAppearance"
            android:layout_margin="@dimen/_10sdp"
            android:hint="@string/mother_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMotherNameCustomerEntry"
                style="@style/Edittext"
                android:hint="@string/enter_mother_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAnnualIncomeEntry"
            style="@style/TextInputLayoutAppearance"
            android:layout_margin="@dimen/_10sdp"
            android:hint="@string/annual_income">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAnnualIncomeEntry"
                style="@style/Edittext"
                android:hint="@string/enter_annual_income"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilOccupationCustomerEntry"
            style="@style/TextInputLayoutAppearance"
            android:layout_margin="@dimen/_10sdp"
            android:hint="@string/occupation">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOccupationCustomerEntry"
                style="@style/Edittext"
                android:hint="@string/enter_occupation"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCasteCustomerEntry"
            style="@style/TextInputLayoutAppearance"
            android:layout_margin="@dimen/_10sdp"
            android:hint="@string/caste">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCasteCustomerEntry"
                style="@style/Edittext"
                android:hint="@string/enter_caste"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmitDdsEntry"
            style="@style/MaterialButton"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>

