<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/present_address"
                android:fontFamily="@font/poppins_regular"
                app:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilHouseNoAddressEntry"
                style="@style/TextInputLayoutAppearance"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/house_no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHouseNoAddressEntry"
                    style="@style/Edittext"
                    android:hint="@string/enter_house_no"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAddressEntry"
                style="@style/TextInputLayoutAppearance"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddressEntry"
                    style="@style/Edittext"
                    android:hint="@string/enter_address"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLandmarkAddressEntry"
                style="@style/TextInputLayoutAppearance"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/landmark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLandmarkAddressEntry"
                    style="@style/Edittext"
                    android:hint="@string/enter_landmark"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCityAddressEntry"
                style="@style/TextInputLayoutAppearance"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/city">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCityAddressEntry"
                    style="@style/Edittext"
                    android:hint="@string/enter_city"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPincodeAddressEntry"
                style="@style/TextInputLayoutAppearance"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/pincode">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPincodeAddressEntry"
                style="@style/Edittext"
                android:hint="@string/enter_pincode"
                android:maxLength="6"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbCopyToAddressEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copy_to_address"
                android:textSize="@dimen/_14ssp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                app:fontFamily="@font/poppins_regular"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/permanent_address"
                android:fontFamily="@font/poppins_regular"
                app:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutAppearance"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/house_no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHouseNoPermanentAddressEntry"
                    style="@style/Edittext"
                    android:hint="@string/enter_house_no"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutAppearance"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPermanentAddressEntry"
                    style="@style/Edittext"
                    android:hint="@string/enter_address"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutAppearance"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/landmark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLandmarkPermanentAddressEntry"
                    style="@style/Edittext"
                    android:hint="@string/enter_landmark"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutAppearance"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/city">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCityPermanentAddressEntry"
                    style="@style/Edittext"
                    android:hint="@string/enter_city"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutAppearance"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/pincode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPincodePermanentAddressEntry"
                    style="@style/Edittext"
                    android:hint="@string/enter_pincode"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubmitAddressEntry"
                style="@style/MaterialButton"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>

